changes for seller